--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
     <header>
-        <h1>Welcome to Taco Cloud!</h1>
+        <h1>Welcome to the Taco Store</h1>
     </header>
 
     <main>
